[gd_scene load_steps=8 format=2]

[ext_resource path="res://G1_Menu/OSinistromanoBLK.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://G1_Menu/HUD.gd" type="Script" id=2]
[ext_resource path="res://G1_Menu/mixkit-game-ball-tap-2073.wav" type="AudioStream" id=3]
[ext_resource path="res://G1_Menu/mixkit-bonus-earned-in-video-game-2058.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -67.0
margin_right = 67.0
margin_bottom = 476.0
custom_fonts/font = SubResource( 1 )
text = "TITLE"

[node name="newGame" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.65
anchor_right = 0.5
anchor_bottom = 0.65
margin_left = -110.5
margin_top = -35.0
margin_right = 110.5
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
text = "New Game"

[node name="assessment" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.89
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -201.5
margin_top = -70.0
margin_right = 201.5
custom_fonts/font = SubResource( 3 )
text = "Start Assessment"

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Clicksound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 15.0

[node name="Gameoversound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="newGame" to="." method="_on_newGame_pressed"]
[connection signal="pressed" from="assessment" to="." method="_on_assessment_pressed"]
[connection signal="timeout" from="messageTimer" to="." method="_on_messageTimer_timeout"]
